# prediction

./: .gitignore  Dockerfile  GUI_app.py  date_list.csv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
storage/Abashiri/2024-06-10/: Abashiri_2024-04-05.csv  Abashiri_2024-04-06.csv  Abashiri_2024-04-07.csv  Abashiri_2024-04-08.csv  Abashiri_2024-04-09.csv  Abashiri_2024-04-10.csv  Abashiri_2024-04-11.csv  Abashiri_2024-04-12.csv  Abashiri_2024-04-13.csv  Abashiri_2024-04-14.csv  Abashiri_2024-04-15.csv  Abashiri_2024-04-16.csv  Abashiri_2024-04-17.csv  Abashiri_2024-04-18.csv  Abashiri_2024-04-19.csv  Abashiri_2024-04-20.csv  Abashiri_2024-04-21.csv  Abashiri_2024-04-22.csv  Abashiri_2024-04-23.csv  Abashiri_2024-04-24.csv  Abashiri_2024-04-25.csv  Abashiri_2024-04-26.csv  Abashiri_2024-04-27.csv  Abashiri_2024-04-28.csv  Abashiri_2024-04-29.csv  Abashiri_2024-04-30.csv  Abashiri_2024-05-01.csv  Abashiri_2024-05-02.csv  Abashiri_2024-05-03.csv  Abashiri_2024-05-04.csv  Abashiri_2024-05-05.csv
storage/Abashiri/2024-06-17/: Abashiri_2024-04-05.csv  Abashiri_2024-04-06.csv  Abashiri_2024-04-07.csv  Abashiri_2024-04-08.csv  Abashiri_2024-04-09.csv  Abashiri_2024-04-10.csv  Abashiri_2024-04-11.csv  Abashiri_2024-04-12.csv  Abashiri_2024-04-13.csv  Abashiri_2024-04-14.csv  Abashiri_2024-04-15.csv  Abashiri_2024-04-16.csv  Abashiri_2024-04-17.csv  Abashiri_2024-04-18.csv  Abashiri_2024-04-19.csv  Abashiri_2024-04-20.csv  Abashiri_2024-04-21.csv  Abashiri_2024-04-22.csv  Abashiri_2024-04-23.csv  Abashiri_2024-04-24.csv  Abashiri_2024-04-25.csv  (+10 more)
(+558 files in other folders)
