[tool.poetry]
name = "harvest app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
plotly = "^5.22.0"
st-files-connection = "^0.1.0"
gcsfs = "^2024.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
